--- a/pages/abrir-conta-form-2.html
+++ b/pages/abrir-conta-form-2.html
@@ -8,12 +8,8 @@
     <title>MoniBank - Página inicial</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Montserrat:wght@400;500;600&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"
-        integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/formulario/styles.css">
 </head>
@@ -34,8 +30,7 @@
                 <input class="cabecalho__pesquisa" type="search" placeholder="Busque aqui">
             </li>
             <li class="cabecalho-lista__item">
-                <a href="./abrir-conta-form.html"
-                    class="cabecalho-lista__item-botao cabecalho-lista__item-botao--azul">Abrir conta</a>
+                <a href="./abrir-conta-form.html" class="cabecalho-lista__item-botao cabecalho-lista__item-botao--azul">Abrir conta</a>
             </li>
             <li class="cabecalho-lista__item">
                 <a href="#" class="cabecalho-lista__item-botao">Acessar conta</a>
@@ -60,8 +55,7 @@
                 <h2 class="formulario__titulo-texto">Reconhecimento facial</h2>
                 <p class="formulario__texto">Clique no quadro abaixo para capturarmos uma imagem sua!</p>
 
-                <img src="../img/reconhecimento.png" alt="Rosto com olhos e um sorriso dentro de um enquadramento"
-                    data-video-botao class="formulario__imagem">
+                <img src="../img/reconhecimento.png" alt="Rosto com olhos e um sorriso dentro de um enquadramento" data-video-botao class="formulario__imagem">
 
                 <div class="formulario__camera" data-camera>
                     <video width="320" height="240" autoplay data-video></video>
@@ -135,6 +129,7 @@
             <h2 class="rodape__logo"><span class="rodape__logo--negrito">Moni</span>Bank</h2>
         </section>
     </footer>
+    <script type="module" src="../js/camera.js"></script>
 </body>
 
 </html>
